table added into html

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,9 +7,27 @@
 <body>
     <h1>Boards</h1>
 
-    {% for board in boards %}
-        {{ board.name }} <br>
-    {% endfor %}
+    <table border="1">
+        <thead>
+            <tr>
+                <th>Board</th>
+                <th>Post</th>
+                <th>Topic</th>
+                <th>Last Post</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for board in boards %}
+            <tr>
+                <td>{{ board.name }}<br>
+                <small style="color: #888">{{ board.description }}</small> </td>
+                <td>0</td>
+                <td>0</td>
+                <td></td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 
 </body>
 </html>
