--- a/templates/home.html
+++ b/templates/home.html
@@ -1,14 +1,19 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Boards</title>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 </head>
 <body>
-    <h1>Boards</h1>
+<div class="container">
+    <ol class="breadcrumb my-4">
+        <li class="breadcrumb-item active">Boards</li>
+    </ol>
 
-    <table border="1">
-        <thead>
+    <table class="table">
+        <thead class="table-dark">
             <tr>
                 <th>Board</th>
                 <th>Post</th>
@@ -19,15 +24,17 @@
         <tbody>
             {% for board in boards %}
             <tr>
-                <td>{{ board.name }}<br>
-                <small style="color: #888">{{ board.description }}</small> </td>
-                <td>0</td>
-                <td>0</td>
+                <td>
+                    {{ board.name }}<br>
+                    <small class="text-muted d-block">{{ board.description }}</small>
+                </td>
+                <td class="align-middle">0</td>
+                <td class="align-middle">0</td>
                 <td></td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
-
+</div>
 </body>
 </html>
