--- a/templates/home.html
+++ b/templates/home.html
@@ -1,40 +1,30 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Boards</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-</head>
-<body>
-<div class="container">
-    <ol class="breadcrumb my-4">
-        <li class="breadcrumb-item active">Boards</li>
-    </ol>
+{% extends 'base.html' %}
 
-    <table class="table">
-        <thead class="table-dark">
-            <tr>
-                <th>Board</th>
-                <th>Post</th>
-                <th>Topic</th>
-                <th>Last Post</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for board in boards %}
-            <tr>
-                <td>
-                    {{ board.name }}<br>
-                    <small class="text-muted d-block">{{ board.description }}</small>
-                </td>
-                <td class="align-middle">0</td>
-                <td class="align-middle">0</td>
-                <td></td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-</div>
-</body>
-</html>
+{% block breadcrumb %}
+    <li class="breadcrumb-item active">Boards</li>
+{% endblock %}
+{% block content %}
+<table class="table">
+    <thead class="table-dark">
+        <tr>
+            <th>Board</th>
+            <th>Post</th>
+            <th>Topic</th>
+            <th>Last Post</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for board in boards %}
+        <tr>
+            <td>
+                <a href="{% url 'board_topics' board.pk %}">{{ board.name }}</a><br>
+                <small class="text-muted d-block">{{ board.description }}</small>
+            </td>
+            <td class="align-middle">0</td>
+            <td class="align-middle">0</td>
+            <td></td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+{% endblock %}
