--- a/templates/topics.html
+++ b/templates/topics.html
@@ -1,17 +1,13 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ board.name }}</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-</head>
-<body>
-    <div class="container">
-        <ol class="breadcrumb my-4">
-            <li class="breadcrumb-item">Boards</li>
-            <li class="breadcrumb-item active">{{ board.name }}</li>
-        </ol>
-    </div>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %}
+    {{ board.name }} - {{block.super }}
+{% endblock %}
+
+{% block breadcrumb %}
+    <li class="breadcrumb-item"><a href="{% url 'home' %}">Boards</a></li>
+    <li class="breadcrumb-item active">{{ board.name }}</li>
+{% endblock %}
+
+{% block content %}
+<!-- just leaving it empty for now.we will add core here soon. -->
+{% endblock %}
