--- a/templates/topics.html
+++ b/templates/topics.html
@@ -9,5 +9,29 @@
 {% endblock %}
 
 {% block content %}
-<!-- just leaving it empty for now.we will add core here soon. -->
+    <div class="mb-4">
+        <a href="{% url 'new_topic' board.pk %}" class="btn btn-primary">New Topic</a>
+    </div>
+    <table class="table">
+        <thead class="thead-inverse">
+            <tr>
+                <th>Topic</th>
+                <th>Starter</th>
+                <th>Replies</th>
+                <th>Views</th>
+                <th>Last Update</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for topic in board.topics.all %}
+                <tr>
+                    <td>{{ topic.subject }}</td>
+                    <td>{{ topic.starter.username }}</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>{{ topic.last_update }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
