--- a/templates/new_topic.html
+++ b/templates/new_topic.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load widget_tweaks %}
+
 {% block title %}Start a New Topic{% endblock %}
 
 {% block breadcrumb %}
@@ -9,16 +11,19 @@
 {% endblock %}
 
 {% block content %}
-    <form method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <label for="id_subject">Subject</label>
-            <input type="text" class="form-control" id="id_subject" name="subject">
-        </div>
-        <div class="form-group">
-            <label for="id_message">Message</label>
-            <textarea class="form-control" id="id_message" name="message" rows="5"></textarea>
-        </div>
+    <form method="post" novalidate>{% csrf_token %}
+        {% for field in form %}
+            <div class="form-group">
+                {{ field.label_tag }}
+                {% render_field field class="form-control" %}
+
+                {% if field.help_text %}
+                    <small class="form-text text-muted">
+                        {{ field.help_text }}
+                    </small>
+                {% endif %}
+            </div>
+        {% endfor %}
         <button type="submit" class="btn btn-success">Post</button>
     </form>
 {% endblock %}
