--- a/templates/new_topic.html
+++ b/templates/new_topic.html
@@ -15,13 +15,27 @@
         {% for field in form %}
             <div class="form-group">
                 {{ field.label_tag }}
-                {% render_field field class="form-control" %}
 
-                {% if field.help_text %}
-                    <small class="form-text text-muted">
-                        {{ field.help_text }}
-                    </small>
+            {% if form.is_bound %}
+                {% if field.errors %}
+                    {% render_field field class="form-control is-invalid" %}
+                    {% for error in field.errors %}
+                        <div class="invalid-feedback">
+                        {{ error }}
+                        </div>
+                    {% endfor %}
+                {% else %}
+                    {% render_field field class="form-control is-valid" %}
                 {% endif %}
+            {% else %}
+                {% render_field field class="form-control" %}
+            {% endif %}
+
+                    {% if field.help_text %}
+                        <small class="form-text text-muted">
+                            {{ field.help_text }}
+                        </small>
+                    {% endif %}
             </div>
         {% endfor %}
         <button type="submit" class="btn btn-success">Post</button>
