--- a/templates/new_topic.html
+++ b/templates/new_topic.html
@@ -1,7 +1,5 @@
 {% extends 'base.html' %}
 
-{% load widget_tweaks %}
-
 {% block title %}Start a New Topic{% endblock %}
 
 {% block breadcrumb %}
@@ -12,32 +10,7 @@
 
 {% block content %}
     <form method="post" novalidate>{% csrf_token %}
-        {% for field in form %}
-            <div class="form-group">
-                {{ field.label_tag }}
-
-            {% if form.is_bound %}
-                {% if field.errors %}
-                    {% render_field field class="form-control is-invalid" %}
-                    {% for error in field.errors %}
-                        <div class="invalid-feedback">
-                        {{ error }}
-                        </div>
-                    {% endfor %}
-                {% else %}
-                    {% render_field field class="form-control is-valid" %}
-                {% endif %}
-            {% else %}
-                {% render_field field class="form-control" %}
-            {% endif %}
-
-                    {% if field.help_text %}
-                        <small class="form-text text-muted">
-                            {{ field.help_text }}
-                        </small>
-                    {% endif %}
-            </div>
-        {% endfor %}
+        {% include 'includes/form.html' %}
         <button type="submit" class="btn btn-success">Post</button>
     </form>
 {% endblock %}
