--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Peralta">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
+    {% block stylesheet %}{% endblock %}
 </head>
 <body>
+    {% block body %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="{% url 'home' %}">Django Boards</a>
@@ -22,5 +24,6 @@
     {% block content %}
     {% endblock %}
     </div>
+{% endblock body %}
 </body>
 </html>
