--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,5 +1,13 @@
 {% extends 'base.html' %}
 
-{% block content %}
-    <h2>Sign up</h2>
+{% block body %}
+    <div class="container">
+        <h2>Signup</h2>
+        <form method="post" novalidate>
+            {% csrf_token %}
+{#            {{ form.as_p }}#}
+            {% include 'includes/form.html' %}
+            <button type="submit" class="btn btn-primary">Create an account</button>
+        </form>
+    </div>
 {% endblock %}
