--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
                 </ul>
                 {% else %}
                     <form class="form-inline ml-auto">
-                        <a href="#" class="btn btn-outline-secondary">Log in</a>
+                        <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
                         <a href="{% url 'signup' %}" class="btn btn-outline-primary ml-2">Sign up</a>
                     </form>
                 {% endif %}
