--- a/templates/login.html
+++ b/templates/login.html
@@ -12,20 +12,24 @@
             <a href="{% url 'home' %}">Django Boards</a>
         </h1>
         <div class="row justify-content-center">
-            <div class="col-lg-8 col-md-10 col-sm-12">
+            <div class="col-lg-4 col-md-6 col-sm-8">
                 <div class="card">
                     <div class="card-body">
-                        <h3 class="card-title">Signup</h3>
+                        <h3 class="card-title">Log in</h3>
                         <form method="post" novalidate>
                             {% csrf_token %}
-                {#            {{ form.as_p }}#}
                             {% include 'includes/form.html' %}
-                            <button type="submit" class="btn btn-primary btn-block">Create an account</button>
+                            <button type="submit" class="btn btn-primary btn-block">Login</button>
                         </form>
                     </div>
                     <div class="card-footer text-muted text-center">
-                        Already have an account? <a href="{% url 'login' %}">Log in</a>
+                        New to Django Boards? <a href="{% url 'signup' %}">Sign up</a>
                     </div>
+                </div>
+                <div class="text-center py-2">
+                    <small>
+                        <a href="#" class="text-muted">Forgot your password?</a>
+                    </small>
                 </div>
             </div>
         </div>
