--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,31 +1,22 @@
-{% extends 'base.html' %}
+{% extends 'base_accounts.html' %}
 
-{% load static %}
+{% block title %}Sign up to Djanog Boards{% endblock %}
 
-{% block stylesheet %}
-    <link rel="stylesheet" href="{% static 'css/accounts.css' %}">
-{% endblock %}
-
-{% block body %}
-    <div class="container">
-        <h1 class="text-center logo my-4">
-            <a href="{% url 'home' %}">Django Boards</a>
-        </h1>
-        <div class="row justify-content-center">
-            <div class="col-lg-8 col-md-10 col-sm-12">
-                <div class="card">
-                    <div class="card-body">
-                        <h3 class="card-title">Signup</h3>
-                        <form method="post" novalidate>
-                            {% csrf_token %}
-                {#            {{ form.as_p }}#}
-                            {% include 'includes/form.html' %}
-                            <button type="submit" class="btn btn-primary btn-block">Create an account</button>
-                        </form>
-                    </div>
-                    <div class="card-footer text-muted text-center">
-                        Already have an account? <a href="{% url 'login' %}">Log in</a>
-                    </div>
+{% block content %}
+    <div class="row justify-content-center">
+        <div class="col-lg-8 col-md-10 col-sm-12">
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="card-title">Signup</h3>
+                    <form method="post" novalidate>
+                        {% csrf_token %}
+            {#            {{ form.as_p }}#}
+                        {% include 'includes/form.html' %}
+                        <button type="submit" class="btn btn-primary btn-block">Create an account</button>
+                    </form>
+                </div>
+                <div class="card-footer text-muted text-center">
+                    Already have an account? <a href="{% url 'login' %}">Log in</a>
                 </div>
             </div>
         </div>
