--- a/templates/includes/form.html
+++ b/templates/includes/form.html
@@ -14,7 +14,9 @@
 
         {% render_field field class=field|input_class %}
         {% for error in field.errors %}
-            {{ error }}
+            <div class="invalid-feedback">
+                {{ error }}
+            </div>
         {% endfor %}
 
         {% if field.help_text %}
