--- a/templates/topics.html
+++ b/templates/topics.html
@@ -23,7 +23,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for topic in board.topics.all %}
+            {% for topic in topics %}
                 <tr>
                     <td><a href="{% url 'topic_posts' board.pk topic.pk %}">{{ topic.subject }}</a></td>
                     <td>{{ topic.starter.username }}</td>
