--- a/templates/topic_posts.html
+++ b/templates/topic_posts.html
@@ -14,8 +14,9 @@
     <div class="mb-4">
         <a href="{% url 'reply_topic' topic.board.pk topic.pk %}" class="btn btn-primary" role="button">Reply</a>
     </div>
-    {% for post in topic.posts.all %}
-        <div class="card mb-2 {% if forloop.first %}border-dark{% endif %}">
+
+    {% for post in posts %}
+        <div class="card {% if forloop.last %}mb-4{% else %}mb-2{% endif %}{% if forloop.first %}border-dark{% endif %}">
             {% if forloop.first %}
                 <div class="card-header text-white bg-dark py-2 px-3">{{ topic.subject }}</div>
             {% endif %}
@@ -45,4 +46,6 @@
             </div>
         </div>
     {% endfor %}
+
+    {% include 'includes/pagination.html' %}
 {% endblock %}
