--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
                         <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown">{{ user.username }}</a>
 
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-                            <a class="dropdown-item" href="#">My account</a>
+                            <a class="dropdown-item" href="{% url 'my_account' %}">My account</a>
                             <a class="dropdown-item" href="#">Change password</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
