--- a/templates/topic_posts.html
+++ b/templates/topic_posts.html
@@ -35,7 +35,7 @@
                                 <small class="text-muted">{{ post.created_at }}</small>
                             </div>
                         </div>
-                        {{ post.message }}
+                        {{ post.get_messages_as_markdown }}
                         {% if post.created_by == user %}
                             <div class="mt-3">
                                 <a href="{% url 'edit_post' post.topic.board.pk post.topic.pk post.pk %}" class="btn btn-primary btn-sm" role="button">Edit</a>
