--- a/templates/topic_posts.html
+++ b/templates/topic_posts.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% load gravatar %}
+
 {% block title %}{{ topic.subject }}{% endblock %}
 
 {% block breadcrumb %}
@@ -23,7 +25,7 @@
             <div class="card-body p-3">
                 <div class="row">
                     <div class="col-2">
-                        <img src="{% static 'img/avatar.svg' %}" alt="{{ post.created_by.username }}" class="w-100">
+                        <img src="{{ post.created_by|gravatar }}" alt="{{ post.created_by.username }}" class="w-100">
                         <small>Post:{{ post.created_by.posts.count }}</small>
                     </div>
                     <div class="col-10">
