pagination & fixed some problems

--- a/templates/topics.html
+++ b/templates/topics.html
@@ -15,7 +15,7 @@
     <div class="mb-4">
         <a href="{% url 'new_topic' board.pk %}" class="btn btn-primary">New Topic</a>
     </div>
-    <table class="table">
+    <table class="table table-striped mb-4">
         <thead class="thead-dark">
             <tr>
                 <th>Topic</th>
@@ -27,8 +27,22 @@
         </thead>
         <tbody>
             {% for topic in topics %}
+                {% url 'topic_posts' board.pk topic.pk as topic_url %}
                 <tr>
-                    <td><a href="{% url 'topic_posts' board.pk topic.pk %}">{{ topic.subject }}</a></td>
+                    <td>
+                        <p class="mb-0">
+                            <a href="{{ topic_url }}">{{ topic.subject }}</a>
+                        </p>
+                        <small class="text-muted">
+                            Pages:
+                            {% for i in topic.get_page_range %}
+                                <a href="{{ topic_url }}?page={{ i }}">{{ i }}</a>
+                            {% endfor %}
+                            {% if topic.has_many_pages %}
+                                ... <a href="{{ topic_url }}?page={{ topic.get_page_count }}">Last Page</a>
+                            {% endif %}
+                        </small>
+                    </td>
                     <td>{{ topic.starter.username }}</td>
                     <td>{{ topic.replies }}</td>
                     <td>{{ topic.views }}</td>
