--- a/templates/reply_topic.html
+++ b/templates/reply_topic.html
@@ -28,7 +28,7 @@
         {% include 'includes/form.html' %}
         <button type="submit" class="btn btn-success">Post a reply</button>
     </form>
-    {% for post in topic.posts.all %}
+    {% for post in topic.get_last_ten_posts %}
         <div class="card mb-2">
             <div class="card-body p-3">
                 <div class="row mb-3">
@@ -39,7 +39,7 @@
                         <small class="text-muted">{{ post.created_at }}</small>
                     </div>
                 </div>
-                {{ post.message }}
+                {{ post.get_messages_as_markdown }}
             </div>
         </div>
     {% endfor %}
